--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" sizes="96x96"  />
+    <link rel="icon" href="favicon.ico" sizes="96x96"  />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Swasthi Coconut Oil is traditionally extracted cold-pressed coconut oil.It is pure coconut oil, produced by pressing high quality coconuts in a traditional ghaana(rotary machine)  "
+      content="Swasthi Coconut Oil is traditionally extracted cold-pressed coconut oil.It is pure coconut oil, produced by pressing high quality coconuts in a traditional gaana(rotary machine) "
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
